<resources>
    <string name="app_name">Proiect</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_muzeu">MuzeuActivity</string>
    <string name="btn_login_text">Login</string>
    <string name="btn_register_text">Register</string>
    <string name="edit_hint_email">Email</string>
    <string name="edit_hint_password">Password</string>
    <string name="title_login_activity">Welcome to Targoviste!</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="font_size">font-size</string>
    <string name="test">50dp</string>
    <string name="email_saved">email</string>
    <string name="shared_pref">shared_preferences</string>
    <string name="rating">rating</string>
    <string name="infoTurn">    Turnul Chindiei, cunoscut și ca Turnul Chindia, este un turn construit în secolul al XV-lea, în Târgoviște, care face parte din ansamblul de monumente Curtea Domnească. Turnul a fost construit de către domnitorul Vlad Țepeș, în timpul celei de-a doua domnii, inițial pentru scopuri militare, clădirea servind drept punct de pază, foișor de foc, dar și pentru stocarea tezaurului. Actualmente, clădirea măsoară 27 de metri în înălțime și 9 metri în diametru. Între anii 1847 și 1851, turnul a fost complet restaurat de către domnitorul Gheorghe Bibescu, forma actuală datorându-se acestuia, inclusiv înălțarea sa cu circa 5 metri față de construcția inițială.

Turnul Chindiei este cea mai importantă atracție turistică din oraș și totodată simbolul orașului, elemente specifice edificiului fiind prezente pe stema orașului, în partea de sus, dar și în partea de jos. Fiind un monument istoric, clădirea găzduiește acum o expoziție de documente, arme și obiecte care au aparținut lui Vlad Țepeș. Din punct de vedere administrativ, Turnul Chindiei se află sub tutela Complexului Național Muzeal „Curtea Domnească” Târgoviște.</string>
    <string name="locatie">Locatie</string>
    <string name="infoManastire">   O așezare monahală este menționată documentar la 17 noiembrie 1431, așa cum reiese dintr-un document prin care Alexandru I Aldea îi făcea danie mănăstirii două sate. Mănăstirea inițială fusese probabil întemeiată de către Mircea cel Bătrân.
Mănăstirea a fost reconstruită din temelie, în forma ei actuală, în perioada 1499-1501 și ctitorită de către Radu cel Mare.
Construcția ansamblului a fost terminată în timpul domniei lui Vlăduț Voievod, între 1510 și 1512.
Aici călugărul sârb Macarie a instalat prima tiparniță din țările române, din ale cărei teascuri a ieșit în 1508 prima carte, un Liturghier.</string>
    <string name="infoCasa">    S-a născut la Târgoviște, pe data de 22 februarie în anul 1810, în mahalaua Lemnului, fiind al patrulea copil al vistiernicului M. Lixandrescu. Rămâne orfan și sărac, dar de mic dovedește o inteligență deosebită și o memorie extraordinară. Învață greaca și franceza. A devenit elev la Colegiul Național „Sfântul Sava” din București, fiind coleg cu Ion Ghica. Face cunoștință cu Ion Heliade Rădulescu. Îi uimește pe toți prin talentul său poetic. Un timp va locui acasă la Heliade, care-i va publica prima poezie, Miezul nopții, în Curierul Românesc, urmată de elegia Adio. La Târgoviște.</string>
    <string name="infoMuzeu">   Muzeul de Istorie din Târgoviște este un muzeu județean din Târgoviște, amplasat în Calea Domnească nr. 181. Înscrisă într-un efort edilitar mai amplu, în care și-au unit forțele autoritățile locale și cetățenii, construcția unui Palat de Justiție între 1901 - 1902, în imediata apropiere a sediului Prefecturii (1895), nu a fost deloc surprinzătoare. În 1918, clădirii construite în stil neoclasic și caracterizate prin sobrietatea volumelor și echilibru i se va adăuga etajul. În septembrie 1986, edificiul se va prezenta publicului sub o nouă imagine odată cu inaugurarea noului Muzeu de Istorie. Parterul este destinat în special expozițiilor temporare; o sală modernă, dar și holul, generos ca spațiu, permit atât astfel de evenimente, cât și alte genuri: prezentări, conferințe, seminare. Etajul găzduiește expoziția permanentă a Muzeului de Istorie, ce se dorește un periplu prin istoria acestor meleaguri, din cele mai vechi timpuri ale existenței umane până la finele Primului Război Mondial.</string>
    <string name="unavailable">Unavailable</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="info_muzeu">aaa</string>
    <string name="back">Inapoi</string>
    <string name="title_activity_location">Map</string>
</resources>